pagina de planos

--- a/contact-us.html
+++ b/contact-us.html
@@ -47,7 +47,7 @@
         <div class="topicos">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Planos</a></li>
+                <li><a href="planos.html">Planos</a></li>
                 <li><a href="#">lojinha</a></li>
                 <li><a href="#">Contate-nos</a></li>
                 <li><a href="#">Cadastre-se</a></li>
