--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <h2>Saiba como ajudar!</h2>
                     <p>Seja por planos de adoção, voluntariado à lar provisório ou mesmo por meio de doações, toda forma de ajuda é válida! confira os planos de adoção!</p>
                     <br>
-                    <a href="#">Confira</a>
+                    <a href="planos.html">Confira</a>
                 </li>
                 <br>
                 <br>
@@ -99,7 +99,7 @@
         <div class="topicos">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Planos</a></li>
+                <li><a href="planos.html">Planos</a></li>
                 <li><a href="#">lojinha</a></li>
                 <li><a href="contact-us.html">Contate-nos</a></li>
                 <li><a href="#">Cadastre-se</a></li>
