--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p>Adote um pet com responsabilidade e ganhe um “Kit Casa Nova” totalmente de graça!</p>
                 <br>
                 <br>
-                <a href="#">Saiba Mais</a>
+                <a href="planos.html">Saiba Mais</a>
                 </div>
             <img src="imagens-index/imagem-1-index.jpg" alt="">
         </section>
