--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul class="topnav-menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="contact-us.html">Contate-nos</a></li>
-                <li><a href="#">Lojinha</a></li>
+                <li><a href="lojinha.html">Lojinha</a></li>
             </ul>
             <div id="sign-in-btn">
                 <a href="#">Cadastre-se</a>
@@ -91,7 +91,7 @@
             </div>
             <br>
             <br>
-            <a href="#">Lojinha</a>
+            <a href="lojinha.html">Lojinha</a>
         </section> 
     </main>
     <footer>
@@ -100,7 +100,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="planos.html">Planos</a></li>
-                <li><a href="#">lojinha</a></li>
+                <li><a href="lojinha.html">lojinha</a></li>
                 <li><a href="contact-us.html">Contate-nos</a></li>
                 <li><a href="#">Cadastre-se</a></li>
                 <li><a href="https://bvsms.saude.gov.br/esporotricose/#:~:text=Nos%20felinos%2C%20os%20sintomas%20mais,humanos%20quanto%20nos%20animais%20acometidos." target="_blank">Esporotricose - Entenda mais sobre:</a></li>
