--- a/contact-us.html
+++ b/contact-us.html
@@ -13,7 +13,7 @@
             <ul class="topnav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Contate-nos</a></li>
-                <li><a href="#">Lojinha</a></li>
+                <li><a href="lojinha.html">Lojinha</a></li>
             </ul>
             <div id="sign-in-btn">
                 <a href="#">Cadastre-se</a>
@@ -48,7 +48,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="planos.html">Planos</a></li>
-                <li><a href="#">lojinha</a></li>
+                <li><a href="lojinha.html">lojinha</a></li>
                 <li><a href="#">Contate-nos</a></li>
                 <li><a href="#">Cadastre-se</a></li>
                 <li><a href="https://bvsms.saude.gov.br/esporotricose/#:~:text=Nos%20felinos%2C%20os%20sintomas%20mais,humanos%20quanto%20nos%20animais%20acometidos." target="_blank">Esporotricose - Entenda mais sobre:</a></li>
