--- a/planos.html
+++ b/planos.html
@@ -13,7 +13,7 @@
             <ul class="topnav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contact-us.html">Contate-nos</a></li>
-                <li><a href="#">Lojinha</a></li>
+                <li><a href="lojinha.html">Lojinha</a></li>
             </ul>
             <div id="sign-in-btn">
                 <a href="#">Cadastre-se</a>
