--- a/planos.html
+++ b/planos.html
@@ -22,11 +22,10 @@
     </header>
     <main>
         <h1 id="titulo">CrazyCatPlans</h1>
-        <br>
-        <br>
-        <h1>Escolha seu Plano</h1>
-        <br>
-        <section class="plans"> 
+        <br>   
+        <img src="imagens-planos/gato-sentado-plano.png" class="gato-sentado">
+        <img src="imagens-planos/gato-deitado-plano.png" class="gato-deitado">
+        <section id="planos" class="plans"> 
             <div class="silver">
                 <h1>SILVER</h1>
                 <h2>R$49,90 mensais</h2>
